--- a/.github/workflows/main_todo-react-web.yaml
+++ b/.github/workflows/main_todo-react-web.yaml
@@ -54,10 +54,12 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip dist.zip
 
-      - name: Login to Azure
+     - name: Login to Azure
         uses: azure/login@v2
         with:
-           creds: ${{ secrets.LASTTODOAPP }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_c52515f1-5f2b-4e7e-bdd7-284051ae3050 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_ece2a6d0-196f-4c93-8e47-500e4840b982 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8abd0445-b3d6-4d34-a163-810585813e7e }}
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         with:
